--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,11 @@ nav.navbar.scrolled {
 nav.navbar a.navbar-brand {
     width: 4%;
 }
+@media (max-width:1100px) {
+  nav.navbar a.navbar-brand {
+    width: 10%;
+}
+}
 nav.navbar .navbar-nav .nav-link.navbar-link {
   font-weight: 600;
   color: #ebe6e6 ;
@@ -256,7 +261,6 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   margin-top: 0;
   padding: 260px 0 100px 0;
   background-color: #13480b;
-  /* background:linear-gradient(0.21deg, rgba(51, 101, 56, 0.5) -20.91%, rgba(67, 7, 5, 0.5)80.58%), */
   background-image: url('./assets/img/PasorSegun.jpg');
   clip-path: circle(10, 20, 50,0);
   background-blend-mode: soft-light;
@@ -287,13 +291,6 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   display: block;
 }
 
-/* .banner p {
-  color: #B8B8B8;
-  font-size: 18px;
-  letter-spacing: 0.8px;
-  line-height: 1.5em;
-  width: 96%;
-} */
 .about button {
   color: #fff;
   font-size: 20px;
