--- a/src/components/Aboutpso/App.css
+++ b/src/components/Aboutpso/App.css
@@ -156,7 +156,7 @@
     height: 100%;
     position: absolute;
     top: 0;
-    left: 0;
+    right: 70;
     z-index: 2;
     margin-top: 100px;
     
