--- a/src/components/Whoweare/App.css
+++ b/src/components/Whoweare/App.css
@@ -166,8 +166,14 @@ color:#060505;
   
 }
 .visiontext{
-  margin: 0px 0px 0px 50px;
+  margin: 0px 0px 0px 150px;
 
+}
+@media (min-width: 0px )and (max-width: 1100px ) {
+  .visiontext{
+    margin: 0px 0px 0px 50px;
+  
+  }
 }
 @media (min-width: 0px )and (max-width: 1100px ) {
   .visionimg{
