video background added

--- a/src/App.css
+++ b/src/App.css
@@ -257,18 +257,57 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 	border-color: transparent;
 }
 /* BANNER CSS */
-.banner {
-  margin-top: 0;
-  padding: 260px 0 100px 0;
-  background-color: #13480b;
-  background-image: url('./assets/img/PasorSegun.jpg');
-  clip-path: circle(10, 20, 50,0);
-  background-blend-mode: soft-light;
-  background-position: top center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: #fff ;
+  .banner {
+    margin: 0px 0 0px 0;
+    position: relative;
+    color: #fff;
+  }
+  
+
+
+#background-video {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
+
+#background-video video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.overlay-content {
+  padding-top: 80px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+}
+
+.align-items-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.text-container {
+  max-width: 600px; /* Adjust as needed */
+  text-align: left; /* or center, depending on your design */
+  padding: 20px;
+}
+
+.text-container h3,
+.text-container span,
+.text-container h1,
+.text-container .about {
+  position: relative;
+  z-index: 1;
+}
+
 
 .banner .tagline {
   font-weight: 700;
